Project Slideshow - Addition
Feature Addition
- Homepage Project Slideshow - HTML, CSS and JavaScript

--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"description":"Text Animations","completed":true}]
+[{"description":"Full length photo","completed":false},{"description":"Animated Scroll Down","completed":false},{"description":"Video Image","completed":false},{"description":"Slideshow Slideing Transition","completed":false},{"description":"Text Animations","completed":true}]
